Self/mydevorg/Unpackaged/Config/objects/Visibility__c.object
<CustomObject>
    <description>The custom object that controls the visibility of accounts and establishments</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account that need to be accessed by the user mentioned.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visibility</relationshipLabel>
        <relationshipName>Visibility</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Establishment__c</fullName>
        <label>Establishment</label>
        <referenceTo>Establishment__c</referenceTo>
        <relationshipLabel>Visibility</relationshipLabel>
        <relationshipName>Visibility</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visibility_Reason__c</fullName>
        <description>Enter the reason for defining the visibility exception.</description>
        <inlineHelpText>Enter the reason for defining the visibility exception.</inlineHelpText>
        <label>Visibility Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Visibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Establishment__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Establishment Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Opportunity_00NG0000008djjZMAQ</fullName>
        <active>true</active>
        <field>Opportunity.Visibility__c</field>
        <filterItems>
            <field>Visibility__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Visibility__c.User__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Visibility</name>
        <sourceObject>Opportunity</sourceObject>
    </namedFilters>
    <pluralLabel>Visibility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>